--- a/style.css
+++ b/style.css
@@ -182,6 +182,13 @@ body {
 .valentines-day:hover .text {
   transform: translateY(-50px);
 }
+
+@media only screen and (max-width: 600px) {
+  .text {
+    font-size: 14px; 
+    top: 60px; 
+  }
+}
  
  
  
