--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body {
   justify-content: center;
   height: 100vh;
   font-family: 'Caveat', cursive;
-  background-color: #F5EEE6;
+  background-color: #F7C8E0;
   overflow: hidden;
 }
  
